// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractSamples snapshot: backticks 1`] = `
Array [
  Object {
    "checkJS": false,
    "content": "function greet(who: string) {
  console.log('Hello', who);
}",
    "id": "greet-ts",
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "backticks.asciidoc",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "export const Example = () => <div />;",
    "id": "greet-tsx",
    "isTSX": false,
    "language": "tsx",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "backticks.asciidoc",
    "tsOptions": Object {},
  },
]
`;

exports[`extractSamples snapshot: commented-sample 1`] = `
Array [
  Object {
    "checkJS": false,
    "content": "function somethingDangerous() {}",
    "id": "commented-sample-6",
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "commented-sample.asciidoc",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "let val = null;  // Type is any
try {
  somethingDangerous();
  val = 12;
  val  // Type is number
} catch (e) {
  console.warn('alas!');
}
val  // Type is number | null",
    "id": "commented-sample-12",
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [
      Object {
        "id": "commented-sample-6",
      },
    ],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "commented-sample.asciidoc",
    "tsOptions": Object {},
  },
]
`;

exports[`extractSamples snapshot: doc1 1`] = `
Array [
  Object {
    "checkJS": false,
    "content": "function greet(who: string) {
  console.log('Hello', who);
}",
    "id": "greet-ts",
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "doc1.asciidoc",
    "tsOptions": Object {},
  },
]
`;

exports[`extractSamples snapshot: multilinetype 1`] = `
Array [
  Object {
    "checkJS": false,
    "content": "const o = {x: 1, y: 2};
// type is {
//   x: number;
//   y: number;
// }",
    "id": "multilinetype-3",
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "multilinetype.asciidoc",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "function addWithExtras(a: number, b: number) {
  const c = a + b;  // type is number
  // ...
  return c;
}",
    "id": "multilinetype-13",
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "multilinetype.asciidoc",
    "tsOptions": Object {},
  },
]
`;

exports[`extractSamples snapshot: noid 1`] = `
Array [
  Object {
    "checkJS": false,
    "content": "console.log('Hello', 'TS');",
    "id": "noid-9",
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "noid.asciidoc",
    "tsOptions": Object {},
  },
]
`;

exports[`extractSamples snapshot: prepend 1`] = `
Array [
  Object {
    "checkJS": false,
    "content": "type AB = 'a' | 'b';",
    "id": "prefix",
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "prepend.asciidoc",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "const a: AB = 'a';",
    "id": "combined",
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [
      Object {
        "id": "prefix",
      },
    ],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "prepend.asciidoc",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "const a: AB = 'a';",
    "id": "final",
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "prepend.asciidoc",
    "tsOptions": Object {},
  },
]
`;

exports[`extractSamples snapshot: prepend-multiple 1`] = `
Array [
  Object {
    "checkJS": false,
    "content": "type AB = 'a' | 'b';",
    "id": "prepend-multiple-3",
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "prepend-multiple.asciidoc",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "type ABC = AB | 'c';",
    "id": "prepend-multiple-9",
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [
      Object {
        "id": "prepend-multiple-3",
      },
    ],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "prepend-multiple.asciidoc",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "const c: ABC = 'c';",
    "id": "prepend-multiple-14",
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [
      Object {
        "id": "prepend-multiple-3",
      },
      Object {
        "id": "prepend-multiple-9",
      },
    ],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "prepend-multiple.asciidoc",
    "tsOptions": Object {},
  },
]
`;

exports[`extractSamples snapshot: skip 1`] = `Array []`;
